add some Api in swagger
